Fix CSS layout and HTML structure of green dashboard.  Still need to work with element alignment within the dashboard.

--- a/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -59,6 +59,8 @@ canvas#dashboardChart {
   width: 100% !important;
   max-width: 350px;
   height: auto !important;
+  margin: 0 auto;
+  background-color: rgba(255,255,255,.2);
 }
 
 .profile-pic {
